--- a/HireABook.Entity/HireABook.Entity.csproj
+++ b/HireABook.Entity/HireABook.Entity.csproj
@@ -48,7 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BookInfo.cs" />
+    <Compile Include="BorrowInfo.cs" />
     <Compile Include="DataContext.cs" />
+    <Compile Include="GenreInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfo.cs" />
   </ItemGroup>
