--- a/HireABook.Repository/HireABook.Repository.csproj
+++ b/HireABook.Repository/HireABook.Repository.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BookInfoRepo.cs" />
+    <Compile Include="GenreInfoRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfoRepo.cs" />
   </ItemGroup>
