--- a/HireABook.Web.UI/HireABook.Web.UI.csproj
+++ b/HireABook.Web.UI/HireABook.Web.UI.csproj
@@ -104,40 +104,24 @@
     <Content Include="Content\css\style.red.css" />
     <Content Include="Content\css\style.sea.css" />
     <Content Include="Content\css\style.violet.css" />
+    <Content Include="Content\img\b1.jpg" />
+    <Content Include="Content\img\b2.jpg" />
+    <Content Include="Content\img\b3.jpg" />
+    <Content Include="Content\img\b4.jpg" />
+    <Content Include="Content\img\b5.jpg" />
+    <Content Include="Content\img\b6.jpg" />
+    <Content Include="Content\img\b14.jpg" />
+    <Content Include="Content\img\b13.jpg" />
+    <Content Include="Content\img\b12.jpg" />
+    <Content Include="Content\img\b11.jpg" />
+    <Content Include="Content\img\b10.jpg" />
+    <Content Include="Content\img\b9.jpg" />
+    <Content Include="Content\img\b8.jpg" />
+    <Content Include="Content\img\b7.jpg" />
     <Content Include="Content\img\AjaxLoader.gif" />
-    <Content Include="Content\img\banner.jpg" />
-    <Content Include="Content\img\banner2.jpg" />
-    <Content Include="Content\img\basketsquare.jpg" />
-    <Content Include="Content\img\blog-avatar.jpg" />
-    <Content Include="Content\img\blog-avatar2.jpg" />
     <Content Include="Content\img\blog.jpg" />
-    <Content Include="Content\img\blog2.jpg" />
-    <Content Include="Content\img\detailbig1.jpg" />
-    <Content Include="Content\img\detailbig2.jpg" />
-    <Content Include="Content\img\detailbig3.jpg" />
-    <Content Include="Content\img\detailsquare.jpg" />
-    <Content Include="Content\img\detailsquare2.jpg" />
-    <Content Include="Content\img\detailsquare3.jpg" />
-    <Content Include="Content\img\getinspired1.jpg" />
-    <Content Include="Content\img\getinspired2.jpg" />
-    <Content Include="Content\img\getinspired3.jpg" />
-    <Content Include="Content\img\grabbing.png" />
-    <Content Include="Content\img\logo-small.png" />
-    <Content Include="Content\img\logo.png" />
-    <Content Include="Content\img\main-slider1.jpg" />
-    <Content Include="Content\img\main-slider2.jpg" />
-    <Content Include="Content\img\main-slider3.jpg" />
-    <Content Include="Content\img\main-slider4.jpg" />
-    <Content Include="Content\img\product1.jpg" />
-    <Content Include="Content\img\product1_2.jpg" />
-    <Content Include="Content\img\product2.jpg" />
-    <Content Include="Content\img\product2_2.jpg" />
-    <Content Include="Content\img\product3.jpg" />
-    <Content Include="Content\img\product3_2.jpg" />
-    <Content Include="Content\img\slider1.jpg" />
-    <Content Include="Content\img\slider2.jpg" />
+    <Content Include="Content\img\logo.jpg" />
     <Content Include="Content\img\slider3.jpg" />
-    <Content Include="Content\img\slider4.jpg" />
     <Content Include="Content\img\template-mac.png" />
     <Content Include="Content\js\front.js" />
     <Content Include="Content\Site.css" />
@@ -231,6 +215,7 @@
     <Content Include="Views\Home\Register.cshtml" />
     <Content Include="Views\User\AddBooks.cshtml" />
     <Content Include="Views\User\ShowMyUploads.cshtml" />
+    <Content Include="Views\User\ShowMyProfile.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
