--- a/HireABook.Repository/HireABook.Repository.csproj
+++ b/HireABook.Repository/HireABook.Repository.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BookInfoRepo.cs" />
+    <Compile Include="BorrowInfoRepo.cs" />
     <Compile Include="DataContext.cs" />
     <Compile Include="GenreInfoRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
