--- a/HireABook.Web.UI/HireABook.Web.UI.csproj
+++ b/HireABook.Web.UI/HireABook.Web.UI.csproj
@@ -198,6 +198,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\BookController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -232,6 +233,7 @@
     <Folder Include="Content\vendor\font-awesome\less\" />
     <Folder Include="Content\vendor\font-awesome\scss\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Book\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HireABook.Entity\HireABook.Entity.csproj">
